[package]
name = "dls2pesos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.4"
dotenv_codegen = "0.15.0"
reqwest = {version = "0.11.18", features = ["json"]}
serde = "1.0.164"
serde_json = "1.0.97"
tokio = {version = "1", features = ["full"]}
